--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Grow your plant</title>
 </head>
 
 <body>
-
+  <div class="container">
+    <div class="grow-buttons">
+      <button class="btn-success" id="feed">Add Intake</button>
+      <!-- <button class="btn-success" id="show-state">Current Stats</button> -->
+    </div>
+    <h1>Your Plant's Values</h1>
+    <h3>
+      <div id="intake-value">0</div>
+    </h3>
+  </div>
 </body>
 
 </html>
